# personal-crm

./: .gitignore  pyproject.toml  requirements.txt
networking/: apps.py  env_validation.py  settings.py
networking_base/: admin.py  apps.py  errors.py  models.py  signals.py
networking_base/migrations/: 0002_alter_contact_id_alter_contactduplicate_id_and_more.py
networking_web/: urls.py  views.py
networking_web/templates/web/_atomic/components/: sentiment-indicator.html
networking_web/templates/web/_atomic/molecules/: contact-button.html  contact-table.html  interaction-add-button.html  interaction-card.html
networking_web/templates/web/_atomic/organisms/: contact-card.html  interaction-list.html
networking_web/templates/web/_atomic/pages/: interactions-detail.html
