[project]
name = "personal-crm"
version = "0.1.0"
description = "A personal CRM system built with Django"
requires-python = ">=3.12"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = true
check_untyped_defs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "networking.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra -q"
testpaths = ["tests"]