[tool.poetry]
name = "personal-crm"
version = "0.1.0"
description = "A personal CRM system built with Django"
authors = []
readme = "README.md"
packages = [{include = "personal_crm"}]

[tool.poetry.dependencies]
python = ">=3.12"
django = "5.0.2"
django-allauth = "0.61.0"
django-crispy-forms = "2.1"
crispy-bootstrap4 = "2023.1"
pandas = "2.2.0"
numpy = "1.26.3"
anthropic = "*"
google-api-python-client = "2.116.0"
google-auth = "2.27.0"
google-auth-oauthlib = "1.2.0"
google-auth-httplib2 = "0.2.0"
python-dotenv = "1.0.0"

[tool.poetry.group.dev.dependencies]
black = "24.1.1"
flake8 = "7.0.0"
isort = "5.13.2"
mypy = "1.8.0"
pytest = "8.0.0"
pytest-django = "4.8.0"
